<resources>
    <string name="app_name">Instashoot</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="confirm_pasword">Confirm Pasword</string>
    <string name="register_button">Register</string>
    <string name="already_regstered">Already Registered?</string>
    <string name="login">Login</string>
    <string name="app_version">3</string>
    <string name="app_language">DE</string>

    <string-array name="posts">
        <item>Post 1</item>
        <item>Post 2</item>
        <item>Post 4</item>
    </string-array>

    <string-array name="sensitiveness">
        <item>sensitive</item>
        <item>not sensitive</item>
        <item>sensitive</item>
    </string-array>

    <string-array name="dates">
        <item>02.02.2019</item>
        <item>05.03.2019</item>
        <item>07.03.2017</item>
    </string-array>
</resources>
