<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3f0ff"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".RegisterActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/app_icon"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/user_mdpi"
        android:background="#ffffff"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/password_mdpi"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/cnfPasswordEditText"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/password_mdpi"
        android:hint="@string/confirm_pasword"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/register_button" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/already_regstered"/>

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>